# MyRv32i

./: .gitignore  .svlint.toml  MyRv32I.drawio  layout.gtkw  requirements.txt  run.sh  wave.sh
.github/workflows/: check.yml
automation/: fmax.py  fv.sh  mmap.py  rom.py
automation/fmax/src/: main.cpp
automation/rtlmeta/: CMakeLists.txt
automation/rtlmeta/src/: main.cpp
firmware/: test.s
rtl/: core.sv  mmap.yaml  rom.svh  rv32i.sv  uart.v  uart_rx.v  uart_tx.v
rtl/components/: fifo.sby  fifo.sv
rtl/core/: core.sv  core_mem_arbiter.sv  decode.sv  execute.sv  fetch.sv  local_ram.sv  lsu.sv  opcode.svh  regs.sv
rtl/core/rom/: core_rom.sv  rom.svh
run/: main.cpp
tb/: fifo.py  test_core_mem_arbiter.cpp  tests.sh
